force-app/main/default/objects/RuleEntry__c/RuleEntry__c.object-meta.xml
<CustomObject>
    <description>Responsible for saving the attribution rule criteria, to whom the owner will be added and whether an email will be sent.</description>
    <label>Rule Entry</label>
    <nameField>
        <displayFormat>RE-{000000}</displayFormat>
        <label>Code Rule Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>