force-app/main/default/objects/RuleEntry__c/fields/AssignTo__c.field-meta.xml
<CustomField>
    <fullName>AssignTo__c</fullName>
    <description>User or queue ID that was chosen at the time of creation or editing.</description>
    <inlineHelpText>User or queue ID that was chosen at the time of creation or editing.</inlineHelpText>
    <label>Assign To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>