force-app/main/default/objects/RuleEntry__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>Criteria that was selected at the time of creation or editing.</description>
    <inlineHelpText>Criteria that was selected at the time of creation or editing.</inlineHelpText>
    <label>Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>