force-app/main/default/objects/RuleEntry__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email Template Id that was added at the time of creation or editing.</description>
    <inlineHelpText>Email Template Id that was added at the time of creation or editing.</inlineHelpText>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>