force-app/main/default/objects/RuleEntry__c/fields/Logic__c.field-meta.xml
<CustomField>
    <fullName>Logic__c</fullName>
    <description>Informs the logic of the criterion</description>
    <inlineHelpText>Informs the logic of the criterion</inlineHelpText>
    <label>Logic</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>