force-app/main/default/objects/RuleEntry__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Defines the order of checking the criteria.</description>
    <inlineHelpText>Defines the order of checking the criteria.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>