force-app/main/default/objects/RuleEntry__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Field responsible for informing which rule is related.</description>
    <inlineHelpText>Field responsible for informing which rule is related.</inlineHelpText>
    <label>Rule</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>It is only possible to add if the Rule is active.</errorMessage>
        <filterItems>
            <field>Rule__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Try adding these Rule Entries from the Rule related screen</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Rule__c</referenceTo>
    <relationshipLabel>Rule Entries</relationshipLabel>
    <relationshipName>Rule_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>